[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemy/Wraith/HitStunWraith.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Wraith/MagicAttackWraith.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Wraith/floatWraithSprite.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Wraith/idleWraithSprite.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Wraith/DeathWraithSprite.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Wraith/Wraith.gd" type="Script" id=6]
[ext_resource path="res://Enemy/Wraith/ProjectileAttackWraithSprite.png" type="Texture" id=7]
[ext_resource path="res://Misc/healthBarProgress.png" type="Texture" id=8]
[ext_resource path="res://User Interface/UI Elements/MinionHealthBar.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.7755
height = 48.0414

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.4949
height = 41.8674

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 22, 14, 31, 75 ), Rect2( 97, 16, 31, 73 ), Rect2( 172, 22, 32, 64 ), Rect2( 235, 43, 34, 46 ), Rect2( 311, 65, 34, 24 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -38 ), Vector2( 0, -37 ), Vector2( 0, -32 ), Vector2( 0, -24 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fireball"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 7, 14, 32, 75 ), Rect2( 60, 14, 61, 75 ), Rect2( 135, 14, 51, 75 ), Rect2( 203, 14, 51, 75 ), Rect2( 135, 14, 51, 75 ), Rect2( 60, 14, 61, 75 ), Rect2( 7, 14, 32, 75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -38 ), Vector2( 15, -38 ), Vector2( 11, -38 ), Vector2( 15, -38 ), Vector2( 0, -38 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Rect2( 25, 16, 31, 75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -38 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 27, 13, 32, 75 ), Rect2( 99, 13, 32, 75 ), Rect2( 168, 13, 32, 75 ), Rect2( 99, 13, 32, 75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -38 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 9, 12, 32, 75 ), Rect2( 65, 12, 61, 75 ), Rect2( 140, 13, 51, 75 ), Rect2( 208, 12, 55, 75 ), Rect2( 280, 12, 68, 75 ), Rect2( 365, 12, 85, 75 ), Rect2( 280, 12, 68, 75 ), Rect2( 365, 12, 85, 75 ), Rect2( 280, 12, 68, 75 ), Rect2( 140, 13, 51, 75 ), Rect2( 65, 12, 61, 75 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -38 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Punchbox/Attack:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 20, 14, 33, 73 ), Rect2( 84, 14, 36, 72 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -38 ) ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 19.9239, 6.7246 )

[node name="Wraith" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -45 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.280594, -41.5311 )
shape = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.280624, -37.0412 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 3 )
anims/Fireball = SubResource( 4 )
anims/Hurt = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Punch = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -38 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 9, 12, 32, 75 )

[node name="Punchbox" type="Area2D" parent="Sprite"]
collision_layer = 2

[node name="Attack" type="CollisionShape2D" parent="Sprite/Punchbox"]
position = Vector2( 23.2911, -1.68369 )
shape = SubResource( 9 )
disabled = true

[node name="attackCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="fireballCooldown" type="Timer" parent="."]
wait_time = 10.0

[node name="enemy" type="Node" parent="."]

[node name="Health" type="TextureRect" parent="."]
margin_left = -19.9237
margin_top = -85.5877
margin_right = 74.0763
margin_bottom = -45.5877
rect_scale = Vector2( 0.449714, 0.681525 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="Health"]
margin_left = 2.19141
margin_top = 2.22168
margin_right = 602.191
margin_bottom = 76.2217
rect_scale = Vector2( 0.148388, 0.0687039 )
value = 100.0
texture_progress = ExtResource( 8 )
tint_progress = Color( 0.862745, 0.478431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="Sprite/Punchbox" to="." method="_on_Punchbox_area_entered"]
[connection signal="timeout" from="attackCooldown" to="." method="_on_attackCooldown_timeout"]
[connection signal="timeout" from="fireballCooldown" to="." method="_on_attackCooldown_timeout"]
[connection signal="timeout" from="fireballCooldown" to="." method="_on_fireballCooldown_timeout"]
